--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "commit": "git add . && git-cz",
     "publish": "git pull && npm version patch && git push"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@antv/x6": "^1.30.0",
+    "antd": "^4.18.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/plugin-transform-typescript": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "babel-loader": "^8.2.3",
