--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@antv/x6": "^1.30.0",
     "antd": "^4.18.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/plugin-transform-typescript": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.4",
