--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@antv/x6": "^1.30.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@xstate/graph": "^1.4.2",
+    "@xstate/react": "^3.0.0",
     "antd": "^4.18.5",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "xstate": "^4.31.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
@@ -39,6 +44,8 @@
     "jest": "^27.4.7",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "mockjs": "^1.1.0",
+    "redux-devtools": "^3.7.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
