--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish": "git pull && npm version patch && git push"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@antv/x6": "^1.30.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@xstate/graph": "^1.4.2",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "uuid-v4": "^0.1.0",
     "xstate": "^4.31.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
+    "classnames": "^2.3.1",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.4",
     "commitlint": "^13.1.0",
